syntax = "proto3";

package com.nationsbenefits.igloo.protobuf.bas;

import "google/protobuf/timestamp.proto";
import "com/nationsbenefits/igloo/common/models/protobuf/common_models.proto";

option java_multiple_files = true;
option java_package = "com.nationsbenefits.igloo.bas.grpc";
option java_outer_classname = "BasProto";

/**
  * BAS analyzes for Adjudication APL and MCC transaction.
  *
  * @param AnalyzeBasket request containing AnalyzeBasket details.
  * @return AnalyzeBasketResponse containing AnalyzeBasketResponse details.
 */
service BasService {
  rpc analyzeBasket(AnalyzeBasket) returns (AnalyzeBasketResponse) {
  }
}

/**
  * This include all the details required to analyze the basket for MCC for APL transaction.
 */
message AnalyzeBasket {
  com.nationsbenefits.igloo.common.models.protobuf.Member member = 1;
  com.nationsbenefits.igloo.common.models.protobuf.Account account = 2;
  com.nationsbenefits.igloo.common.models.protobuf.Merchant merchant =3;
  com.nationsbenefits.igloo.common.models.protobuf.Transaction transaction = 4;
  com.nationsbenefits.igloo.common.models.protobuf.Card card = 5;
}

/**
 * Adjudication response from the adjudication service.
 */
message AnalyzeBasketResponse {

  // Transaction details sent by merchant
  com.nationsbenefits.igloo.common.models.protobuf.Transaction transaction = 1;

  // Unique transaction ID generated by nations benefits.
  // SHA256 Hash [PanHash + Amount]
  string nationsBenefitsGeneratedId = 2;

  // Represents the authorized total transaction amount.
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedTransactionAmount = 3;

  // Status of call to perform Approved Product List adjudication.
  AdjudicationStatus status = 4;

  // The list of product authorization responses. This contains the authorization status and details for each product in the transaction.
  repeated ProductAdjudicationResponse productAdjudicationResponses = 5;

  // Lists all the purse account balances.
  repeated com.nationsbenefits.igloo.common.models.protobuf.PurseAccount purseAccounts = 6;
}

/*
  * Adjudication status for the transaction.
 */
message AdjudicationStatus {
  string code = 1;
  string desc = 2;
}

/**
 * Adjudication response from the adjudication service.
 */
message ProductAdjudicationResponse {
  // Product details
  com.nationsbenefits.igloo.common.models.protobuf.Product product = 1;

  // purse identifier for the product. This is used to determine the purse for the product.
  string purseType = 2;

  // Represents the authorized total transaction amount before tax.
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedAmountBeforeTax = 3;

  // Represents the authorized tax amount.
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedTax = 4;

  // Represents the authorized fees amount.
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedFees = 5;

  // Authorization result for the product.
  string authResult = 6;

  // Status of call to perform Approved Product List adjudication.
  ProductAdjudicationStatus status = 7;
}

/**
 * Product auth status for APL Adjudication status.
 */
message ProductAdjudicationStatus {
  string code = 1;
  string desc = 2;
}